--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,700,1,0" />
-    <link class="favicon" rel="icon" href="../imagens/favicon2.svg" type="image/svg+xml"
+    <link class="favicon" rel="icon" href="assets/SVGS/favicon2.svg" type="image/svg+xml"
         media="(prefers-color-scheme: dark)">
-    <link class="favicon" rel="icon" href="../imagens/favicon.svg" type="image/svg+xml"
+    <link class="favicon" rel="icon" href="assets/SVGS/favicon.svg" type="image/svg+xml"
         media="(prefers-color-scheme: light)">
-    <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
+    
     <title>Nicolas Abadia Pinheiro | Portfolio</title>
 </head>
 
@@ -23,16 +24,13 @@
 
     <input type="checkbox" id="toggle">
     <header>
-        <div class="logotipo"> <img class="logotipo" src="../imagens/Ativo 3.svg" alt=""></div>
+        <div class="logotipo"> <img class="logotipo" src="/assets/SVGS/favicon.svg" alt=""></div>
 
         <nav translate="no">
             <ul class="nav-web">
                 <li><a class="nav-link" id="a_home" href="../html/index.html"><b>Home</b></a></li>
-                <li><a class="nav-link" id="a_webdesign" href="../html/webdesign.html">Web Design</a></li>
-                <li><a class="nav-link" id="a_branding" href="../html/brandingdesign.html">Branding Design</a></li>
-                <li><a class="nav-link" id="a_packing" href="../html/packingdesign.html">Packing Design</a></li>
-                <li><a class="nav-link" id="a_editorial" href="../html/editorial.html">Editorial</a></li>
-                <li><a class="nav-link" id="a_video" href="../html/video.html">Video</a></li>
+                <li><a class="nav-link" id="a_webdesign" href="../html/webdesign.html">Portfolio</a></li>
+                <li><a class="nav-link" id="a_branding" href="../html/brandingdesign.html">Resume</a></li>
             </ul>
 
             <label class="navbar-toggler" for="toggle">
@@ -42,15 +40,10 @@
             </label>
             <ul translate="no" class="nav-mobile">
                 <li class="nav-item"><a class="nav-link" id="a_home" href="../html/index.html"><b>Home</b></a></li>
-                <li class="nav-item"><a class="nav-link" id="a_webdesign" href="../html/webdesign.html">Web Design</a>
+                <li class="nav-item"><a class="nav-link" id="a_webdesign" href="../html/webdesign.html">Portfolio</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" id="a_branding" href="../html/brandingdesign.html">Branding
-                        Design</a></li>
-                <li class="nav-item"><a class="nav-link" id="a_packing" href="../html/packingdesign.html">Packing
-                        Design</a></li>
-                <li class="nav-item"><a class="nav-link" id="a_editorial" href="../html/editorial.html">Editorial</a>
+                <li class="nav-item"><a class="nav-link" id="a_branding" href="../html/brandingdesign.html">Resume</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" id="a_video" href="../html/video.html">Video</a></li>
             </ul>
         </nav>
     </header>
@@ -58,11 +51,10 @@
 
     <main>
         <section class="banner">
-            <img  class="nick-banner" src="../imagens/nickgif.gif" alt="">
-            <h2>Hi there! It's great to meet you!</h2>
+            <img  class="nick-banner" src="assets/BANNERS/nickgif.gif" alt="banner">
         </section>
         <section class="about">
-            <img class="img-project" src="../imagens/Foxy 1.png" alt="">
+            <img class="img-project" src="assets/Foxy 1.png" alt="">
             <div class="desc">
                 <h3>I’m Nicolas Abadia Pinheiro</h2>
                     <p>With my design portfolio, you can discover what motivates me and how I think when creating
