Home page Dark and Light mode

--- a/index.html
+++ b/index.html
@@ -24,7 +24,12 @@
 
     <input type="checkbox" id="toggle">
     <header>
-        <div class="logotipo"> <img class="logotipo" src="/assets/SVGS/favicon.svg" alt=""></div>
+        <div class="logotipo"> 
+            <img id="llogo" class="img-logotipo" src="/assets/SVGS/favicon.svg" alt="" media="(prefers-color-scheme: light)">
+            <img id="dlogo" class="img-logotipo" src="/assets/SVGS/favicon2.svg" alt="" media="(prefers-color-scheme: dark)">
+            <h2>Nicolas Abadia Pinheiro</h2>
+            <p><b>/HOME</b></p>
+        </div>
 
         <nav translate="no">
             <ul class="nav-web">
@@ -56,12 +61,17 @@
         <section class="about">
             <img class="img-project" src="assets/Foxy 1.png" alt="">
             <div class="desc">
-                <h3>I’m Nicolas Abadia Pinheiro</h2>
-                    <p>With my design portfolio, you can discover what motivates me and how I think when creating
-                        amazing projects. I'm always thinking outside the box to create designs that are attractive and
-                        practical. My design portfolio contains projects of various sizes and for various purposes, from
-                        responsive websites to app interfaces. I hope you like what I have created and be inspired to
-                        create something even better.</p>
+                <h2>Nicolas Abadia Pinheiro</h2>
+                    <p>Técnico em Design Gráfico pelo SENAI Theobaldo De Nigris com Certificação Profissional Adobe. Tenho interesse em participar e desenvolver projetos criativos. Gosto de comunicar e resolver problemas visualmente.
+                        Sou um profissional proativo e colaborativo. Quero trabalhar como ilustrador e artista conceitual em projetos de animação e jogos, desenvolvendo ilustrações, personagens e histórias.</p>
+            </div>
+        </section>
+        <section class="works">
+            <a class="all-works"><div class="a-all-works"><p href="">ALL WORKS</p></div></a>
+            <div class="works-categories">
+                <a class="ic-works"><div class="a-all-works"><p href="">ILLUSTRATION & CONCEPT ART</p></div></a>
+                <a class="gd-works"><div class="a-all-works"><p href="">BRANDING, PACKING & EDITORIAL</p></div></a>
+                <a class="vm-works"><div class="a-all-works"><p href="">VIDEO & MOTION Design</p></div></a>
             </div>
         </section>
     </main>
