--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <nav translate="no">
             <ul class="nav-web">
-                <li><a class="nav-link" id="a_home" href="../html/index.html"><b>Home</b></a></li>
-                <li><a class="nav-link" id="a_webdesign" href="../html/webdesign.html">Portfolio</a></li>
-                <li><a class="nav-link" id="a_branding" href="../html/brandingdesign.html">Resume</a></li>
+                <li><a class="nav-link" id="a_home" href="#"><b>Home</b></a></li>
+                <li><a class="nav-link" id="a_webdesign" href="#">Portfolio</a></li>
+                <li><a class="nav-link" id="a_branding" href="#">Resume</a></li>
             </ul>
 
             <label class="navbar-toggler" for="toggle">
@@ -44,10 +44,10 @@
                 <span class="bar"></span>
             </label>
             <ul translate="no" class="nav-mobile">
-                <li class="nav-item"><a class="nav-link" id="a_home" href="../html/index.html"><b>Home</b></a></li>
-                <li class="nav-item"><a class="nav-link" id="a_webdesign" href="../html/webdesign.html">Portfolio</a>
+                <li class="nav-item"><a class="nav-link" id="a_home" href="#"><b>Home</b></a></li>
+                <li class="nav-item"><a class="nav-link" id="a_webdesign" href="#">Portfolio</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" id="a_branding" href="../html/brandingdesign.html">Resume</a>
+                <li class="nav-item"><a class="nav-link" id="a_branding" href="#">Resume</a>
                 </li>
             </ul>
         </nav>
@@ -67,11 +67,11 @@
             </div>
         </section>
         <section class="works">
-            <a class="all-works"><div class="a-all-works"><p href="">ALL WORKS</p></div></a>
+            <a class="all-works"><div class="a-all-works"><p href="#">ALL WORKS</p></div></a>
             <div class="works-categories">
-                <a class="ic-works"><div class="a-all-works"><p href="">ILLUSTRATION & CONCEPT ART</p></div></a>
-                <a class="gd-works"><div class="a-all-works"><p href="">BRANDING, PACKING & EDITORIAL</p></div></a>
-                <a class="vm-works"><div class="a-all-works"><p href="">VIDEO & MOTION Design</p></div></a>
+                <a class="ic-works"><div class="a-all-works"><p href="#">ILLUSTRATION & CONCEPT ART</p></div></a>
+                <a class="gd-works"><div class="a-all-works"><p href="#">BRANDING, PACKING & EDITORIAL</p></div></a>
+                <a class="vm-works"><div class="a-all-works"><p href="#">VIDEO & MOTION Design</p></div></a>
             </div>
         </section>
     </main>
