--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <nav translate="no">
             <ul class="nav-web">
-                <li><a class="nav-link" id="a_home" href="#"><b>Home</b></a></li>
-                <li><a class="nav-link" id="a_webdesign" href="#">Portfolio</a></li>
-                <li><a class="nav-link" id="a_branding" href="#">Resume</a></li>
+                <li><a class="nav-link" id="a_home" href="index.html"><b>Home</b></a></li>
+                <li><a class="nav-link" id="a_portfolio" href="portfolio.html">Portfolio</a></li>
+                <li><a class="nav-link" id="a_resume" href="resume.html">Currículo</a></li>
             </ul>
 
             <label class="navbar-toggler" for="toggle">
@@ -44,10 +44,10 @@
                 <span class="bar"></span>
             </label>
             <ul translate="no" class="nav-mobile">
-                <li class="nav-item"><a class="nav-link" id="a_home" href="#"><b>Home</b></a></li>
-                <li class="nav-item"><a class="nav-link" id="a_webdesign" href="#">Portfolio</a>
+                <li class="nav-item"><a class="nav-link" id="a_home" href="index.html"><b>Home</b></a></li>
+                <li class="nav-item"><a class="nav-link" id="a_portfolio" href="portfolio.html">Portfolio</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" id="a_branding" href="#">Resume</a>
+                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html">Currículo</a>
                 </li>
             </ul>
         </nav>
@@ -76,7 +76,7 @@
         </section>
     </main>
     <footer>
-        <h2>Contact</h2>
+        <h2>CONTATO</h2>
         <span class="email">nicolasabadia.contato@gmail.com</span>
         <div translate="no" class="social">
             <a target="_blank" href="https://www.instagram.com/gogimatilu/">Instagram</a><span class="st">|</span><a
@@ -84,7 +84,7 @@
                 target="_blank" href="https://www.artstation.com/gogimatilu">Artstation</a><span class="st">|</span><a
                 target="_blank" href="https://www.behance.net/nicolasabadia">Behance</a>
         </div>
-        <span class="credits">By Nicolas Abadia Pinheiro</span>
+        <span class="credits">Por Nicolas Abadia Pinheiro</span>
     </footer>
 </body>
 
