--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
             </div>
         </section>
         <section class="works">
-            <a class="all-works"><div class="a-all-works"><p href="#">ALL WORKS</p></div></a>
+            <a href="portfolio.html" class="all-works"><div class="a-all-works"><p >ALL WORKS</p></div></a>
             <div class="works-categories">
-                <a class="ic-works"><div class="a-all-works"><p href="#">ILLUSTRATION & CONCEPT ART</p></div></a>
-                <a class="gd-works"><div class="a-all-works"><p href="#">BRANDING, PACKING & EDITORIAL</p></div></a>
-                <a class="vm-works"><div class="a-all-works"><p href="#">VIDEO & MOTION Design</p></div></a>
+                <a href="illustration.html" class="ic-works"><div class="a-all-works"><p >ILLUSTRATION & CONCEPT ART</p></div></a>
+                <a href="#" class="gd-works"><div class="a-all-works"><p >BRANDING, PACKING & EDITORIAL</p></div></a>
+                <a href="#" class="vm-works"><div class="a-all-works"><p >VIDEO & MOTION Design</p></div></a>
             </div>
         </section>
     </main>
