--- a/illustration.html
+++ b/illustration.html
@@ -57,8 +57,8 @@
     <main>
         <nav>
             <ul class="nav-port">
-                <li><a class="nav-link" id="a_home" href="portfolio.html"><b>ALL WORKS</b></a></li>
-                <li><a class="nav-link" id="a_portfolio" href="illustration.html">ILLUSTRATION & CONCEPT ART</a></li>
+                <li><a class="nav-link" id="a_home" href="portfolio.html">ALL WORKS</a></li>
+                <li><a class="nav-link" id="a_portfolio" href="illustration.html"><b>ILLUSTRATION & CONCEPT ART</b></a></li>
                 <li><a class="nav-link" id="a_resume" href="#">BRANDING, PACKING & EDITORIAL</a></li>
                 <li><a class="nav-link" id="a_resume" href="#">VIDEO & MOTION GRAPHICS</a></li>
             </ul>
@@ -68,13 +68,14 @@
                 <div class="box">
                     <div class="column">
                         <img src="assets/ALLWORKS/THOR5.jpg" alt="">
+                        <img src="assets/ALLWORKS/ALIVE2.jpg" alt="">
                     </div>
                     <div class="column">
                         <img src="assets/ALLWORKS/0023.jpg" alt="">
 
                     </div>
                     <div class="column">
-                        <img src="assets/ALLWORKS/002.jpg" alt="">
+                        <img src="assets/ALLWORKS/POSA5.jpg" alt="">
                     </div>
                 </div>
             </div>
