Illustration Portfolio Updates

--- a/resume.html
+++ b/resume.html
@@ -45,9 +45,9 @@
             </label>
             <ul translate="no" class="nav-mobile">
                 <li class="nav-item"><a class="nav-link" id="a_home" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" id="a_portfolio" href="portfolio.html"><b>Portfolio</b></a>
+                <li class="nav-item"><a class="nav-link" id="a_portfolio" href="portfolio.html">Portfolio</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html">Currículo</a>
+                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html"><b>Currículo</b></a>
                 </li>
             </ul>
         </nav>
