--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
             <ul class="nav-port">
                 <li><a class="nav-link" id="a_portfolio" href="portfolio.html"><b>ILLUSTRATION & CONCEPT ART</b></a></li>
                 <li><a class="nav-link" id="a_resume" href="graphicdesign.html">BRANDING, PACKING & EDITORIAL</a></li>
-                <li><a class="nav-link" id="a_resume" href="#">VIDEO & MOTION GRAPHICS</a></li>
+                <li><a class="nav-link" id="a_resume" href="video.html">VIDEO & MOTION GRAPHICS</a></li>
             </ul>
         </nav>
        <section class="projects">
