--- a/video.html
+++ b/video.html
@@ -58,8 +58,8 @@
         <nav>
             <ul class="nav-port">
                 <li><a class="nav-link" id="a_portfolio" href="portfolio.html">ILLUSTRATION & CONCEPT ART</a></li>
-                <li><a class="nav-link" id="a_resume" href="graphicdesign.html"><b>BRANDING, PACKING & EDITORIAL</b></a></li>
-                <li><a class="nav-link" id="a_resume" href="video.html">VIDEO & MOTION GRAPHICS</a></li>
+                <li><a class="nav-link" id="a_resume" href="graphicdesign.html">BRANDING, PACKING & EDITORIAL</a></li>
+                <li><a class="nav-link" id="a_resume" href="video.html"><b>VIDEO & MOTION GRAPHICS</b></a></li>
             </ul>
         </nav>
        <section class="projects">
