--- a/resume.html
+++ b/resume.html
@@ -129,9 +129,23 @@
                         <p>SAGA</p>
                         <p>2020</p>
                 </div>
+                <div>
+                    <h2>CERTIFICAÇÕES</h2>
+                        <h3>CERTIFICADO DE PROFICIÊNCIA EM LÍNGUA INGLSA: NÍVEL INTERMEDIÁRIO SUPERIOR</h3>
+                        <p>Duolingo English Test</p>
+                        <p>2023</p>
+                        <h3>ADOBE CERTIFIED PROFESSIONAL Graphic Design & Illustration using Adobe Illustrator</h3>
+                        <p>Adobe</p>
+                        <p>2023</p>
+                </div>
+                <div>
+                    <h2>IDIOMAS</h2>
+                        <h3>INGLÊS INTERMEDIÁRIO SUPERIOR</h3>
+                        <p>Duolingo English Test</p>
+                        <p>2023</p>
+                </div>
             </div>
         </section>
-        
     </main>
     <footer>
         <h2>CONTATO</h2>
