--- a/video.html
+++ b/video.html
@@ -88,6 +88,7 @@
         </div>
         <span class="credits">Por Nicolas Abadia Pinheiro</span>
     </footer>
+    <script src="javascript/script.js"></script>
 </body>
 
 </html>
