--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
                                 
                             </div>
                             <img src="assets/ALLWORKS/ALIVE2.jpg" alt="">
-                            <video loop autoplay controls src="assets/ALLWORKS/ALIVE2 (1).mp4"></video>
+                            <video controls autoplay loop  src="assets/ALLWORKS/ALIVE2 (1).mp4"></video>
                         </div>
                     </div>
                     <div class="column">
@@ -137,7 +137,7 @@
                             </div>
                             <img src="assets/ALLWORKS/ROBOFLL (1).jpg" alt="">
                             <img src="assets/ALLWORKS/0023.jpg" alt="">
-                            <video loop autoplay controls src="assets/ALLWORKS/0001-0250.mp4"></video>
+                            <video controls autoplay loop src="assets/ALLWORKS/0001-0250.mp4"></video>
                             <img src="assets/ALLWORKS/MOCKUPTATU (1).jpg" alt="">
                             <p>Design da Camisa da Equipe Tatubóticos 2023</p>
                         </div>
