--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -74,9 +74,38 @@
                         
                     </div>
                     <div class="column">
-                        <div class="image"><img src="assets/ALLWORKS/Captura de tela 2024-02-03 124009 - Copia.png" alt=""></div>
+                        <div class="image"><img id="demon" src="assets/ALLWORKS/Captura de tela 2024-02-03 124009 - Copia.png" alt=""></div>
                         <div class="image"><img src="assets/ALLWORKS/DOMCAS.png" alt=""></div>
                         <div class="image"><img src="assets/ALLWORKS/PRIJA.png" alt=""></div>
+                    </div>
+                    <div class="popup-img" id="demon">
+                        <div>
+                            <span>&times;</span>
+                            <div class="popup-desc">
+                                <h2>Campanha Promocional: Demon Slayer & Bubble Kill</h2>
+                                <p>Trabalho de Conclusão de Curso do Técnico em Design Gráfico do SENAI</p>
+                                <p>2023</p>
+                                <p><b>Softwares:</b> Photoshop, Illustrator, After Effects, CapCut, Spline, InDesign & Figma</p>
+                            </div>
+                            <img src="assets/ALLWORKS/Slide1.JPG" alt="">
+                            <h2>POSTERS</h2>
+                            <img src="assets/ALLWORKS/Mitsuri3.jpg" alt="">
+                            <img src="assets/ALLWORKS/Screenshot_20230530-054259_OneDrive.jpg" alt="">
+                            <img src="assets/ALLWORKS/Screenshot_20230530-054313_OneDrive.jpg" alt="">
+                            <img src="assets/ALLWORKS/Screenshot_20230530-054327_OneDrive.jpg" alt="">
+                            <h2>MOCKUPS</h2>
+                            <img src="assets/ALLWORKS/muckup mitsuri.jpg" alt="">
+                            <img src="assets/ALLWORKS/MitsuriMockup.png" alt="">
+                            <img src="assets/ALLWORKS/mockup tokito.jpg" alt="">
+                            <img src="assets/ALLWORKS/tanjimocuop.png" alt="">
+                            <h2>REDES SOCIAIS</h2>
+                            <img src="assets/ALLWORKS/POST FACEBOOK.png" alt="">
+                            <h2>COPOS</h2>
+                            <video autoplay loop  src="assets/ALLWORKS/studio-lighting-copy-3 (2).mp4"></video>
+                            <video autoplay loop  src="assets/ALLWORKS/studio-lighting-copy-3 (3).mp4"></video>
+                            <video autoplay loop  src="assets/ALLWORKS/studio-lighting-copy-3 (4).mp4"></video>
+                            <video autoplay loop  src="assets/ALLWORKS/studio-lighting-copy-3 (5).mp4"></video>
+                        </div>
                     </div>
                     <div class="column">
                         <div class="image"><img src="assets/ALLWORKS/BLOOP.png" alt=""></div>
