--- a/portfolio.html
+++ b/portfolio.html
@@ -152,7 +152,7 @@
                                 <p><b>Software:</b> Photoshop</p>
                                 
                             </div>
-                            <img src="assets/ALLWORKS/Rabbit New Year Posts.jpg" alt="">
+                            <img src="assets/ALLWORKS/Rabbit New Year Posts2.jpg" alt="">
                         </div>
                     </div>
                     <div class="column">
