--- a/resume.html
+++ b/resume.html
@@ -116,6 +116,9 @@
                         <p>SESI 434 Tatuapé</p>
                         <p>Agosto/2023 - Em andamento</p>
                         <p>*Programa de preparação e bolsa de estudos no exterior subsidiado pela FIESP.</p>
+                        <h3>DESIGN PARA JOGOS DIGITAIS</h3>
+                        <p>SENAI Theobaldo De Nigris</p>
+                        <p>Agosto/2023</p>
                         <h3>PREPARAÇÃO PARA O MUNDO DO TRABALHO</h3>
                         <p>SENAI</p>
                         <p>2023</p>
