--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -134,7 +134,7 @@
                 </div>
                 <div>
                     <h2>CERTIFICAÇÕES</h2>
-                        <h3>CERTIFICADO DE PROFICIÊNCIA EM LÍNGUA INGLSA: NÍVEL INTERMEDIÁRIO SUPERIOR</h3>
+                        <h3>CERTIFICADO DE PROFICIÊNCIA EM LÍNGUA INGLESA: NÍVEL INTERMEDIÁRIO SUPERIOR</h3>
                         <p>Duolingo English Test</p>
                         <p>2023</p>
                         <h3>ADOBE CERTIFIED PROFESSIONAL Graphic Design & Illustration using Adobe Illustrator</h3>
