--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -66,12 +66,26 @@
             <div class="container">
                 <div class="box">
                     <div class="column">
+                        <div class="image"><img id="ceu" src="assets/ALLWORKS/image (1).jpg" alt=""></div>
                         <div class="image"><img id="tatu" src="assets/ALLWORKS/MOCKUPTATU.jpg" alt=""></div>
                         <div class="image"><img id="bloopem" src="assets/ALLWORKS/Captura de tela 2023-12-28 151054.png" alt=""></div>
                         <div class="image"><img src="assets/ALLWORKS/LANA LANI.png" alt=""></div>
                         <div class="image"><img id="senai" src="assets/ALLWORKS/Captura de tela 2024-02-05 160158.png" alt=""></div>
                         
                         
+                    </div>
+                    <div class="popup-img" id="ceu">
+                        <div>
+                            <span>&times;</span>
+                            <div class="popup-desc">
+                                <h2>Identidade Visual do Centro de Treinamento de Tênis de Mesa CEU Carrão</h2>
+                                <p>2023</p>
+                                <p><b>Softwares:</b> Illustrator & Canva</p>
+                            </div>
+                            <img src="assets/ALLWORKS/image (1).jpg" alt="">
+                            <img src="assets/ALLWORKS/1.png" alt="">
+                            <img src="assets/ALLWORKS/2.png" alt="">
+                        </div>
                     </div>
                     <div class="popup-img" id="tatu">
                         <div>
