--- a/resume.html
+++ b/resume.html
@@ -114,7 +114,7 @@
                     <h2>CURSOS LIVRES E ATIVIDADES EXTRACURRICULARES</h2>
                         <h3>PASSAPORTE PARA O FUTURO</h3>
                         <p>SESI 434 Tatuapé</p>
-                        <p>Agosto/2023 - Em andamento</p>
+                        <p>Agosto/2023</p>
                         <p>*Programa de preparação e bolsa de estudos no exterior subsidiado pela FIESP.</p>
                         <h3>DESIGN PARA JOGOS DIGITAIS</h3>
                         <p>SENAI Theobaldo De Nigris</p>
