--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <img class="img-project" src="assets/Foxy 1.png" alt="">
             <div class="desc">
                 <h2>Nicolas Abadia Pinheiro</h2>
+<h3> Ilustrador e Designer Gráfico </h3>
                     <p>Sou formado em Design Gráfico pelo SENAI Theobaldo De Nigris e possuo Certificação Profissional Adobe. Busco oportunidades de participar e desenvolver projetos criativos, utilizando a comunicação visual para resolver problemas. Sou um profissional proativo e colaborativo. Meu objetivo é atuar como ilustrador e artista conceitual em projetos de animação e jogos, criando ilustrações, personagens e histórias.</p>
             </div>
         </section>
