--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
             <div class="desc">
                 <div >
                     <h2 id="me">Nicolas Abadia Pinheiro</h2>
-<h3> Ilustrador e Designer Gráfico</h3>
+<h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
                         <p>Sou formado em Design Gráfico pelo SENAI Theobaldo De Nigris e possuo Certificação Profissional Adobe. Busco oportunidades de participar e desenvolver projetos criativos, utilizando a comunicação visual para resolver problemas. Sou um profissional proativo e colaborativo. Meu objetivo é atuar como ilustrador e artista conceitual em projetos de animação e jogos, criando ilustrações, personagens e histórias.</p>
                 </div>
                 <div >
