--- a/resume.html
+++ b/resume.html
@@ -59,7 +59,7 @@
             <img  class="nick-banner" src="assets/BANNERS/nickgif.gif" alt="banner">
         </section>
 
-        <section class="resume">
+        <section class="about">
             <div class="desc">
                 <div >
                     <h2 id="me">Nicolas Abadia Pinheiro</h2>
