New Projects and Corrections

--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -33,9 +33,9 @@
 
         <nav translate="no">
             <ul class="nav-web">
-                <li><a class="nav-link" id="a_home" href="index.html">Home</a></li>
+          
                 <li><a class="nav-link" id="a_portfolio" href="#"><b>Portfolio</b></a></li>
-                <li><a class="nav-link" id="a_resume" href="resume.html">Currículo</a></li>
+                <li><a class="nav-link" id="a_resume" href="resume.html">About me</a></li>
             </ul>
 
             <label class="navbar-toggler" for="toggle">
@@ -44,10 +44,10 @@
                 <span class="bar"></span>
             </label>
             <ul translate="no" class="nav-mobile">
-                <li class="nav-item"><a class="nav-link" id="a_home" href="index.html">Home</a></li>
+           
                 <li class="nav-item"><a class="nav-link" id="a_portfolio" href="#"><b>Portfolio</b></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html">Currículo</a>
+                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html">About me</a>
                 </li>
             </ul>
         </nav>
@@ -55,9 +55,17 @@
 
 
     <main>
+        <section class="about">
+            <img src="assets/Foxy 1.png" alt="">
+            <div>
+                <h2 id="me">Nicolas Abadia Pinheiro</h2>
+                <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
+                <span class="email">nicolasabadia.contato@gmail.com</span>
+            </div>
+    </section>
         <nav>
             <ul class="nav-port">
-                <li><a class="nav-link" id="a_portfolio" href="portfolio.html">ILLUSTRATION & CONCEPT ART</a></li>
+                <li><a class="nav-link" id="a_portfolio" href="index.html">ILLUSTRATION & CONCEPT ART</a></li>
                 <li><a class="nav-link" id="a_resume" href="graphicdesign.html"><b>BRANDING, PACKING & EDITORIAL</b></a></li>
                 <li><a class="nav-link" id="a_resume" href="video.html">VIDEO & MOTION GRAPHICS</a></li>
             </ul>
