--- a/resume.html
+++ b/resume.html
@@ -33,9 +33,8 @@
 
         <nav translate="no">
             <ul class="nav-web">
-                <li><a class="nav-link" id="a_home" href="index.html">Home</a></li>
-                <li><a class="nav-link" id="a_portfolio" href="portfolio.html">Portfolio</a></li>
-                <li><a class="nav-link" id="a_resume" href="resume.html"><b>Currículo</b></a></li>
+                <li><a class="nav-link" id="a_portfolio" href="index.html">Portfolio</a></li>
+                <li><a class="nav-link" id="a_resume" href="resume.html"><b>About me</b></a></li>
             </ul>
 
             <label class="navbar-toggler" for="toggle">
@@ -44,10 +43,9 @@
                 <span class="bar"></span>
             </label>
             <ul translate="no" class="nav-mobile">
-                <li class="nav-item"><a class="nav-link" id="a_home" href="index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" id="a_portfolio" href="portfolio.html">Portfolio</a>
+                <li class="nav-item"><a class="nav-link" id="a_portfolio" href="index.html">Portfolio</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html"><b>Currículo</b></a>
+                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html"><b>About me</b></a>
                 </li>
             </ul>
         </nav>
@@ -58,13 +56,19 @@
         <section class="banner">
             <img  class="nick-banner" src="assets/BANNERS/nickgif.gif" alt="banner">
         </section>
-
+        <section class="about">
+            <img src="assets/Foxy 1.png" alt="">
+            <div>
+                <h2 id="me">Nicolas Abadia Pinheiro</h2>
+                <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
+                <span class="email">nicolasabadia.contato@gmail.com</span>
+            </div>
+    </section>
         <section class="resume">
             <div class="desc">
                 <div >
-                    <h2 id="me">Nicolas Abadia Pinheiro</h2>
-<h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
-                        <p>Sou formado em Design Gráfico pelo SENAI Theobaldo De Nigris e possuo Certificação Profissional Adobe. Busco oportunidades de participar e desenvolver projetos criativos, utilizando a comunicação visual para resolver problemas. Sou um profissional proativo e colaborativo. Meu objetivo é atuar como ilustrador e artista conceitual em projetos de animação e jogos, criando ilustrações, personagens e histórias.</p>
+                    <h2 id="me">INTRO</h2>
+                    <p>Sou formado em Design Gráfico pelo SENAI Theobaldo De Nigris e possuo Certificação Profissional Adobe. Busco oportunidades de participar e desenvolver projetos criativos, utilizando a comunicação visual para resolver problemas. Sou um profissional proativo e colaborativo. Meu objetivo é atuar como ilustrador e artista conceitual em projetos de animação e jogos, criando ilustrações, personagens e histórias.</p>
                 </div>
                 <div >
                     <h2 id="me">Habilidades</h2>
