--- a/video.html
+++ b/video.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br>
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -33,9 +33,8 @@
 
         <nav translate="no">
             <ul class="nav-web">
-                <li><a class="nav-link" id="a_home" href="index.html">Home</a></li>
                 <li><a class="nav-link" id="a_portfolio" href="#"><b>Portfolio</b></a></li>
-                <li><a class="nav-link" id="a_resume" href="resume.html">Currículo</a></li>
+                <li><a class="nav-link" id="a_resume" href="resume.html">About me</a></li>
             </ul>
 
             <label class="navbar-toggler" for="toggle">
@@ -44,10 +43,9 @@
                 <span class="bar"></span>
             </label>
             <ul translate="no" class="nav-mobile">
-                <li class="nav-item"><a class="nav-link" id="a_home" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" id="a_portfolio" href="#"><b>Portfolio</b></a>
                 </li>
-                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html">Currículo</a>
+                <li class="nav-item"><a class="nav-link" id="a_resume" href="resume.html">About me</a>
                 </li>
             </ul>
         </nav>
@@ -55,9 +53,17 @@
 
 
     <main>
+        <section class="about">
+            <img src="assets/Foxy 1.png" alt="">
+            <div>
+                <h2 id="me">Nicolas Abadia Pinheiro</h2>
+                <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
+                <span class="email">nicolasabadia.contato@gmail.com</span>
+            </div>
+    </section>
         <nav>
             <ul class="nav-port">
-                <li><a class="nav-link" id="a_portfolio" href="portfolio.html">ILLUSTRATION & CONCEPT ART</a></li>
+                <li><a class="nav-link" id="a_portfolio" href="index.html">ILLUSTRATION & CONCEPT ART</a></li>
                 <li><a class="nav-link" id="a_resume" href="graphicdesign.html">BRANDING, PACKING & EDITORIAL</a></li>
                 <li><a class="nav-link" id="a_resume" href="video.html"><b>VIDEO & MOTION GRAPHICS</b></a></li>
             </ul>
