--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,14 @@
         <section class="banner">
             <img  class="nick-banner" src="assets/BANNERS/nickgif.gif" alt="banner">
         </section>
-
+        <section class="about">
+            <img src="assets/Foxy 1.png" alt="">
+            <div>
+                <h2 id="me">Nicolas Abadia Pinheiro</h2>
+                <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
+                <span class="email">nicolasabadia.contato@gmail.com</span>
+            </div>
+    </section>
         <section class="resume">
             <div class="desc">
                 <div >
