--- a/resume.html
+++ b/resume.html
@@ -63,7 +63,7 @@
                 <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
                 <span class="email">nicolasabadia.contato@gmail.com</span>
             </div>
-    </section>
+        </section>
         <section class="resume">
             <div class="desc">
                 <div >
@@ -107,7 +107,7 @@
                     </ul>
                 </div>
                 <div>
-                    <h2>Histórico Acadêmico</h2>
+                    <h2 id="me">Histórico Acadêmico</h2>
                         <h3>CURSO TÉCNICO EM DESIGN GRÁFICO</h3>
                         <p>SENAI Theobaldo De Nigris</p>
                         <p>Janeiro/2022 - Junho/2023</p>
@@ -116,7 +116,7 @@
                         <p>Janeiro/2021 - Dezembro/2023</p>
                 </div>
                 <div>
-                    <h2>CURSOS LIVRES E ATIVIDADES EXTRACURRICULARES</h2>
+                    <h2 id="me">CURSOS LIVRES E ATIVIDADES EXTRACURRICULARES</h2>
                         <h3>PASSAPORTE PARA O FUTURO</h3>
                         <p>SESI 434 Tatuapé</p>
                         <p>Agosto/2023</p>
@@ -138,7 +138,7 @@
                         <p>2020</p>
                 </div>
                 <div>
-                    <h2>CERTIFICAÇÕES</h2>
+                    <h2 id="me">CERTIFICAÇÕES</h2>
                         <h3>CERTIFICADO DE PROFICIÊNCIA EM LÍNGUA INGLESA: NÍVEL INTERMEDIÁRIO SUPERIOR</h3>
                         <p>Duolingo English Test</p>
                         <p>2023</p>
@@ -147,7 +147,7 @@
                         <p>2023</p>
                 </div>
                 <div>
-                    <h2>IDIOMAS</h2>
+                    <h2 id="me">IDIOMAS</h2>
                         <h3>INGLÊS INTERMEDIÁRIO SUPERIOR</h3>
                         <p>Duolingo English Test</p>
                         <p>2023</p>
