--- a/resume.html
+++ b/resume.html
@@ -62,12 +62,18 @@
                 <h2 id="me">Nicolas Abadia Pinheiro</h2>
                 <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
                 <span class="email">nicolasabadia.contato@gmail.com</span>
+                <div class="social2">
+                    
+                    <a target="_blank" href="https://www.artstation.com/gogimatilu"><img class="svg" src="assets/SVGS/icons8-artstation.svg" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/gogimatilu/"><img class="svg" src="assets/SVGS/icons8-instagram.svg" alt=""></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/nicolas-abadia-pinheiro/"><img class="svg" src="assets/SVGS/icons8-linkedin.svg" alt=""></a>
+                    <a target="_blank" href="https://www.behance.net/nicolasabadia"><img class="svg" src="assets/SVGS/icons8-behance.svg" alt=""></a>
+                </div>
             </div>
         </section>
         <section class="resume">
             <div class="desc">
                 <div >
-                    <h2 id="me">INTRO</h2>
                     <p>Sou formado em Design Gráfico pelo SENAI Theobaldo De Nigris e possuo Certificação Profissional Adobe. Busco oportunidades de participar e desenvolver projetos criativos, utilizando a comunicação visual para resolver problemas. Sou um profissional proativo e colaborativo. Meu objetivo é atuar como ilustrador e artista conceitual em projetos de animação e jogos, criando ilustrações, personagens e histórias.</p>
                 </div>
                 <div >
@@ -139,10 +145,22 @@
                 </div>
                 <div>
                     <h2 id="me">CERTIFICAÇÕES</h2>
+                        <h3><a target="_blank" href="https://www.credly.com/badges/c4d9ff80-8160-4ea8-a2b7-2d3aea4991b8/public_url">Adobe Certified Professional in Visual Design</a>
+                        </h3>
+                        <p>Adobe</p>
+                        <p>2024</p>
+
+                        <h3><a href="https://www.credly.com/badges/a0cb74dd-c147-4891-bf81-e32d19d6c8eb/public_url">Adobe Certified Professional in Visual Design Using Adobe Photoshop
+                        </a>
+                        </h3>
+                        <p>Adobe</p>
+                        <p>2024</p>
+                        
                         <h3>CERTIFICADO DE PROFICIÊNCIA EM LÍNGUA INGLESA: NÍVEL INTERMEDIÁRIO SUPERIOR</h3>
                         <p>Duolingo English Test</p>
                         <p>2023</p>
-                        <h3>ADOBE CERTIFIED PROFESSIONAL Graphic Design & Illustration using Adobe Illustrator</h3>
+                        <h3><a target="_blank" href="https://www.credly.com/badges/9504184e-1336-4f5c-9de8-6d52f14bd2c9/public_url">Adobe Certified Professional in Graphic Design & Illustration Using Adobe Illustrator</a>
+                        </h3>
                         <p>Adobe</p>
                         <p>2023</p>
                 </div>
