--- a/video.html
+++ b/video.html
@@ -59,6 +59,14 @@
                 <h2 id="me">Nicolas Abadia Pinheiro</h2>
                 <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
                 <span class="email">nicolasabadia.contato@gmail.com</span>
+                <div class="social2">
+                    
+                    <a target="_blank" href="https://www.artstation.com/gogimatilu"><img class="svg" src="assets/SVGS/icons8-artstation.svg" alt=""></a>
+                    <a target="_blank" href="https://www.instagram.com/gogimatilu/"><img class="svg" src="assets/SVGS/icons8-instagram.svg" alt=""></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/nicolas-abadia-pinheiro/"><img class="svg" src="assets/SVGS/icons8-linkedin.svg" alt=""></a>
+                    <a target="_blank" href="https://www.behance.net/nicolasabadia"><img class="svg" src="assets/SVGS/icons8-behance.svg" alt=""></a>
+                </div>
+
             </div>
     </section>
         <nav>
