--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <main>
         <section class="about">
-            <img src="assets/Foxy 1.png" alt="">
+            <img src="assets/foxy.png" alt="">
             <div>
                 <h2 id="me">Nicolas Abadia Pinheiro</h2>
                 <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
