--- a/resume.html
+++ b/resume.html
@@ -57,7 +57,7 @@
             <img  class="nick-banner" src="assets/BANNERS/nickgif.gif" alt="banner">
         </section>
         <section class="about">
-            <img src="assets/Foxy 1.png" alt="">
+            <img src="assets/foxy.png" alt="">
             <div>
                 <h2 id="me">Nicolas Abadia Pinheiro</h2>
                 <h3> ILUSTRADOR | DESIGNER GRÁFICO</h3>
