oncontext menu change and english change

--- a/resume.html
+++ b/resume.html
@@ -163,7 +163,7 @@
                 </div>
                 <div>
                     <h2 id="me">IDIOMAS</h2>
-                        <h3>INGLÊS INTERMEDIÁRIO SUPERIOR</h3>
+                        <h3>INGLÊS FLUENTE</h3>
                         <p>Duolingo English Test</p>
                         <p>2023</p>
                 </div>
@@ -171,7 +171,7 @@
         </section>
     </main>
     <footer>
-        <h2>CONTATO</h2>
+        <h2>CONTACT</h2>
         <span class="email">nicolasabadia.contato@gmail.com</span>
         <div translate="no" class="social">
             <a target="_blank" href="https://www.instagram.com/gogimatilu/">Instagram</a><span class="st">|</span><a
